--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,8 +9,12 @@
   "author": "Ankit Chouhan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "joi": "^14.3.1",
+    "joi-objectid": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash.pick": "^4.4.0",
     "mongoose": "^5.9.13"
   }
 }
