--- a/App/todoApp/pubspec.yaml
+++ b/App/todoApp/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  http: ^0.12.1
+  jaguar_jwt: ^2.1.6
+  flutter_secure_storage: ^3.3.3
 
 dev_dependencies:
   flutter_test:
