--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "joi": "^14.3.1",
     "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash.pick": "^4.4.0",
-    "mongoose": "^5.9.13"
+    "mongoose": "^5.9.13",
+    "winston": "^3.2.1",
+    "winston-mongodb": "^5.0.1"
   }
 }
